<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.StepTabFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/step_tab"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:tabMode="scrollable" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/step_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8" />

    <include
        layout="@layout/bottom_buttons"
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

</LinearLayout>
</layout>